[gd_scene load_steps=10 format=3 uid="uid://dqegmrm3aji23"]

[ext_resource type="Script" path="res://scenes/levels/0/newspapers.gd" id="1_xjddr"]
[ext_resource type="PackedScene" uid="uid://cwr11cjj6iydx" path="res://scenes/levels/1/intro.tscn" id="2_hl4ym"]
[ext_resource type="PackedScene" uid="uid://b5vgmyclbwdx2" path="res://scripts/window_reference.tscn" id="2_ke4xq"]
[ext_resource type="Texture2D" uid="uid://d3kd861f0h0x7" path="res://assets/intro-background.png" id="3_kcdeh"]
[ext_resource type="Texture2D" uid="uid://c28fwld3ktxfu" path="res://assets/intro-background-steam-1.png" id="4_d0e6r"]
[ext_resource type="Texture2D" uid="uid://dtrf8ruvv4k5i" path="res://assets/intro-background-steam-2.png" id="5_mt4kg"]
[ext_resource type="PackedScene" uid="uid://ccx2fsneqld7h" path="res://agents/newspaper/newspaper.tscn" id="6_moa6u"]
[ext_resource type="AudioStream" uid="uid://banew6sqfiweq" path="res://sound/waiting.wav" id="8_2tc2d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wy852"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_d0e6r")
}, {
"duration": 1.0,
"texture": ExtResource("5_mt4kg")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="Newspapers" type="Node"]
script = ExtResource("1_xjddr")
next_scene = ExtResource("2_hl4ym")

[node name="WindowReference" parent="." instance=ExtResource("2_ke4xq")]
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.427493, 0.427493, 0.427493, 0.737255)
offset_right = 200.0
offset_bottom = 200.0
scale = Vector2(2.2, 2.2)
texture = ExtResource("3_kcdeh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TextureRect"]
sprite_frames = SubResource("SpriteFrames_wy852")
autoplay = "default"
centered = false

[node name="NewspaperMarker" type="Marker2D" parent="."]
position = Vector2(216, 173)

[node name="NewsPapers" type="Node2D" parent="."]

[node name="Newspaper1" parent="NewsPapers" instance=ExtResource("6_moa6u")]
visible = false
position = Vector2(215, 172)
rotation = 0.0655591
scale = Vector2(0.7, 0.7)
title = "Tiny surgeons in a pill"
article = "Groundbreaking scientist invents a brand new shrinking machine. The machine can shrink a full team of surgeons to a tiny, pill-sized capsule ready to operate from inside your body. "

[node name="Newspaper2" parent="NewsPapers" instance=ExtResource("6_moa6u")]
visible = false
position = Vector2(220, 174)
rotation = -0.0422936
scale = Vector2(0.7, 0.7)
title = "Cost-Cutting Brilliance"
article = "MicroMedic operates from inside the body using a budget-friendly control system: a keyboard with just [color=black]arrow keys or AWSD and a space bar[/color]. This minimalist approach saved millions in production costs and training time."

[node name="Newspaper3" parent="NewsPapers" instance=ExtResource("6_moa6u")]
visible = false
position = Vector2(205, 192)
scale = Vector2(0.7, 0.7)
title = "MicroMedic under fire"
article = "Critics ask if it's really nessicary that the surgeons are shrunk and put in the capsule. Dr Nefario asks \"Why not just use remote controlls to steer the vessel? This is just overly complex and dangerous.\". MicroMedic inc. declined to comment"

[node name="Newspaper4" parent="NewsPapers" instance=ExtResource("6_moa6u")]
visible = false
position = Vector2(210, 183)
rotation = -0.0674517
scale = Vector2(0.7, 0.7)
title = "MicroMedic denies deaths"
article = "MicroMedic Inc denies claims that patients have died from botched surgeries. Their CEO stated \"We have never had a failed surgery, all of our patients have been successfully cured of the ailment they came in with\". "

[node name="Newspaper5" parent="NewsPapers" instance=ExtResource("6_moa6u")]
visible = false
position = Vector2(212, 176)
scale = Vector2(0.7, 0.7)
title = "Dr Nefario found dead"
article = "Dr Nefario, a renowned paediatric heart surgeon, was found dead after falling from the roof of St Nicks Hospital. The hospital director says no foul play is suspected, but notes that access to the roof shouldn't normally be possible."

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_2tc2d")
volume_db = -5.0
autoplay = true
